tests/should_fail/preprocessor_ub.c
#if (-(0x7fffffffffffffffLL) - 1) / -1
#endif
#if (-(0x7fffffffffffffffLL) - 1) % -1
#endif
